--- a/Home.wiki
+++ b/Home.wiki
@@ -13,8 +13,19 @@ Two moderated mailing-lists are available, one for the users and the other for t
 
 == HPL over PARSEC ==
  
- * [[version0|V0]]: First version numerically correct with dynamic creation of workspaces, (9f2b7ee1366d+ 5304+ zenati)
-
+ * V0: First version numerically correct with dynamic creation of workspaces, (9f2b7ee1366d+ 5304+ zenati)
+ ** In zenati branch, zgetrf_fusion.jdf
+ ** No check have been done with GPUs
+ ** Panel:
+ *** Uses only one preallocated workspace for the U during panel factorization
+ *** Local reduction is done with a binary tree with three elements reduced at once
+ *** Distributed reduction is done through Bruck's algorithm
+ *** NO immediates are used in the panel
+ ** Update:
+ *** Swap exchanges are done with a full tile
+ *** GEMM and SWAP are done in column major
+ *** SWAP_COLLECT are done through a chain
+ *** SWAP_RECV and GEMM are not merged together
 
  ---- 
 
